anna edits to document for jjh comments

--- a/Gender-Comparisons-Overall.tex
+++ b/Gender-Comparisons-Overall.tex
@@ -22,7 +22,7 @@
 
 \noindent I am still looking for a clean story. At baseline, who is more disadvantaged boys or girls? In terms of:\\
 
-\noindent {\bf [JLG: These are the numbers]}
+\noindent {\bf [JLG: These are the numbers comparing all boys to all girls]}
 
 \begin{itemize}
 \item Education of mother
@@ -53,19 +53,19 @@
 \noindent {\bf [JLG: not observed at baseline, observed later at some ages.]}
 \end{itemize}
 
-\noindent  {\bf [JLG: So, as we have discussed multiple times, boys seem to have advantage if we take the differences in the levels of this variables seriously, but the difference are not statistically significant. That is why we use the measure or index in Table 5. You keep saying in the text that the index in Table 5 is not at baseline, but as the note of the table clearly states, all of the measures are at baseline. You also say that the measure is arbitrary. That measure is a factor estimated from the following variables: Mother's age, mother's education, mother's IQ, mother's marital status, mother's employment, and number of siblings.}\\
+\noindent  {\bf [JLG: So, as we have discussed multiple times, boys seem to have advantage relative to girls if we take the differences in the levels of these variables seriously, but the differences are not statistically significant. That is why we use the index in Table 5. You keep saying in the text that the index in Table 5 is not at baseline, but as the note of the table clearly states, all of the measures are at baseline. You also say that the measure is arbitrary. That measure is a factor estimated from the following variables: Mother's age, mother's education, mother's IQ, mother's marital status, mother's employment, and number of siblings.}\\
 
-\noindent {\bf We estimate a factor using this variables to form the index, so the weight given to each of them is not arbitrary. The weights given in the HRI index is and it was set by the researchers at UNC.}\\
+\noindent {\bf We estimate a factor using these variables to form the index, so the weight given to each of them is not arbitrary. Actually, the weights given in the HRI index are arbitrary given that it was set by the researchers at UNC.}\\
 
-\noindent {\bf If you go to row [1], you will see that we reject the null of this index being the same across genders using the Rosenbaum test. The average level in this index is greater for boys than it is for girls, so we conclude that boys are more advantaged than girls.}\\
+\noindent {\bf If you look at row [1], you will see that we reject the null of this index being the same across genders using the Rosenbaum test. The average level of this index is greater for boys than it is for girls, so we conclude that boys are more advantaged than girls.}\\
 
-\noindent {\bf You also comment that ``everyone is disadvantaged in this sample!'' Of course, but we are obviously using the term disadvantaged as relatively disadvantaged within the experiment! Not relative to the population of the US!\\}
+\noindent {\bf You also comment that ``everyone is disadvantaged in this sample!'' Of course, but we are obviously using the term disadvantaged as relatively disadvantaged within the experiment, not relative to the population of the US.]\\}
 
-\noindent In experiment, same question. What is the experimentally induced impact on family environment?
+\noindent In the experiment, same question. What is the experimentally induced impact on family environment?
 
 \begin{itemize} 
 \item More fathers working? 
-\item More mothers? 
+\item More mothers working? 
 \item Family income? 
 \end{itemize}
 
@@ -73,10 +73,10 @@
 
 \begin{itemize} 
 \item Parental Income: this is the set of variables containing mother's income, father's income (when we observe it), mother's and father's labor supply. As you see, the impact is REALLY large in terms of combining functions and the Rosenbaum tests indicate rejection. 
-\item Parenting: this is basically the time series of the HOME scores from age 1 to age 8. Same here. 
+\item Parenting: this is basically the time series of the HOME scores from age 1 to age 8. Similarly, the effect of the experiment is large.
 \end{itemize}
 
-\noindent The sharp gender differences are there in the sense that in each of the outcome categories girls benefit more from treatment than boys. Now, these are of course the treatment effects. But revisit the female-male gaps, pre- and post-treatment in Table 1 for each of the categories in Table 1. The differences are sharp. Most are significant!}\\
+\noindent The sharp gender differences are there in the sense that in each of the outcome categories, girls benefit more from treatment than boys. Now, these are of course the treatment effects. But revisit the female-male gaps, pre- and post-treatment in Table 1 for each of the categories in Table 1. The differences are sharp. Most are significant!]}\\
 
 \noindent I really do not see sharp differences in after or before effects. Before we were emphasizing greater vulnerability of boys:\\
 
@@ -87,16 +87,16 @@
 \item What is the strength of the evidence on either? 
 \end{itemize}
 
-\noindent {\bf [JLG: Yes, we were. But we did not distill differences in baseline characteristics by gender to explain the differences in the treatment effects by gender to explain why the treatment effects differed depending on the counterfactual. Referee 3, the referee whose comments you praised, asked us to clarify that. That's why we explored the baseline differences in the control-group children who stayed stayed at home and the control-group children who attended alternatives.\\ 
+\noindent {\bf [JLG: Yes, we were previously emphasizing greater vulnerability of boys. But we did not distill differences in baseline characteristics by gender to explain the differences in the treatment effects by gender to explain why the treatment effects differed depending on the counterfactual. Referee 3, the referee whose comments you praised, asked us to clarify that. That's why we explored the baseline differences in the control-group children who stayed stayed at home and the control-group children who attended alternatives.\\ 
 
 \noindent In Table 5, and please note that Table 5 is at baseline, we see sharp differences by gender by take-up of alternatives. \\
 
-\noindent Within the control-group boys, the relatively more disadvantaged are sent more to alternatives. The relatively less disadvantaged are at home. Therefore, the treatment effect is greater for boys who went to alternatives - their counterparts who stayed at home were in better environments. Instead, these children were going to preschools with less quality and which began late (age 3). 
+\noindent Within the control-group boys, the relatively more disadvantaged are sent more to alternatives. The relatively less disadvantaged are at home. Therefore, the treatment effect is greater for boys who went to alternatives - their counterparts who stayed at home were in better environments. Instead, these children were going to preschools of lower quality and were beginning the preschools at age 3 instead of at 8 weeks like ABC/CARE). 
 
-\noindent Now, for girls the opposite pattern appears. But not as strong. As a consequence, girls benefit more from treatment if compared to staying at home but the difference is not the same as in the case for boys.]\\ 
+\noindent Now, for girls the opposite pattern appears, but not as strong. As a consequence, girls benefit more from treatment if compared to staying at home but the difference is not the same as in the case for boys.\\ 
 
-\noindent Before, we adduced this to quality. A careful inspection of the data implies that baseline characteristics could be an explanation as well. \\ 
+\noindent Before, we explained this using quality. A careful inspection of the data implies that baseline characteristics could be an explanation as well. \\ 
 
-\noindent Now, we discussed that it could very well be that both stories are there. But there's one bog difference. Our information in quality is not good, while we have measures at baseline with which we can perform tests! So they both could be playing a role. As we discussed in person, it's going to be impossible to separate the stories in our sample or tell what's the strength for either.]}
+\noindent Now, we discussed that it could very well be that both stories are there. But there's one big difference. Our information on quality is not good, while we have measures of disadvantage at baseline with which we can perform tests! So they both could be playing a role. As we discussed in person, it's going to be impossible to separate the stories in our sample or tell what's the strength for either.]}
 
 \end{document}
