--- a/Gender-Comparisons-Overall.tex
+++ b/Gender-Comparisons-Overall.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 
-\noindent Jorge - story line unclear still! (We will soon be booted out) \textbf{[JLG: That would be sad, but we simply seem not to be understanding each other, or maybe I'm just incompetent. But I keep explaining the same thing and you keep asking the same questions. Maybe these samples are much more limited than expected, even when we have done so much them!]}\\
+\noindent Jorge - story line unclear still! (We will soon be booted out) \textbf{[JLG: That would be sad, but we simply seem not to be understanding each other, or maybe I'm just incompetent. But I keep explaining the same thing and you keep asking the same questions. Maybe these samples are much more limited than expected, even when we have done so much to them!]}\\
 
 \noindent I am still looking for a clean story. At baseline, who is more disadvantaged boys or girls? In terms of:\\
 
