--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -211,7 +211,7 @@ Note: Panel (a) displays the forecasted labor income for males in the auxiliary 
 
 Random assignment to treatment has statistically and economically significant effects on the intermediate inputs. For females, it increases the average PIAT score by almost a third of standard deviation (the test is standardized to an in-sample standard deviation of 15 units). For males, the effect is almost half of a standard deviation. The program substantially boosts high-school graduation for females and college graduation for both males and females. As a joint summary of these effects, we use years of education as an intermediate input. Labor income at age 21 is not greatly boosted by the program. This arises in part because treatment-group individuals are more likely to be enrolled in college at age 21 and thus not supply labor at this age. However, as the life cycle evolves, lagged labor income is important for obtaining precise forecasts, as economic theory suggests. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20 thousand dollars.\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}\\
 
-\noindent \textbf{Step 3. Testing the Validity of the Technology Estimated in the Non-Experimental Sample.} For identifying and estimating life-cycle treatment effects, forecasting the treatment-control mean difference suffices. This does not require us to take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Simpler conditions, spelled out as Conditions~\ref{cond:cond1} and~\ref{cond:cond2} in Appendix~\ref{appendix:incomplete}, suffice. Exogeneity facilitates the use of economic theory to generate and interpret treatment effects, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. It also facilitates a non-parametric approach that we discuss in Section~\ref{section:following}. Exogeneity also makes identification of $\phi^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} spells out this assumption, which we initially make and then explore alternatives.
+\noindent \textbf{Step 3. Testing the Validity of the Technology Estimated in the Non-Experimental Sample.} For identifying and estimating life-cycle treatment effects, forecasting the treatment-control mean difference suffices. This does not require us to take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Simpler conditions, spelled out as Conditions~\ref{cond:cond1} and~\ref{cond:cond2} in Appendix~\ref{appendix:incomplete}, suffice. Exogeneity facilitates the use of economic theory to generate and interpret treatment effects, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. Exogeneity also makes identification of $\phi^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} spells out this assumption, which we initially make and then explore alternatives.
 
 \onehalfspacing
 \begin{assumption}\label{ass:exog} \textbf{Exogeneity}
@@ -355,9 +355,9 @@ Y_{k,a}                   &=& \lambda_{0} + \lambda_{1} Y_{k,a-1} + \lambda_{2} 
 
 The forecasted present value of the gain induced by treatment using the model in Equation~\eqref{eq:outcome} pooling males and females is $636,674$ (s.e.\ $183,224$) in 2014 USD. We provide estimates of the present value gain when using more general labor income models (in which Assumption~\ref{ass:exog} does not hold) in Table~\ref{table:predsens}. When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not affect our estimated measures of overall efficiency.
 
-A non-parametric forecasting alternative is to compress the whole procedure into the following. Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching in this fashion creates direct counterparts in the auxiliary samples for each member of the experimental samples. Instead of estimating a model for the life-cycle profile of labor income, we directly use the matched counterparts' profiles. It is an intuitively appealing non-parametric estimator that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}. We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-parametric estimation procedure for conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches in Table~\ref{table:predsens}.
+A non-parametric forecasting alternative is to compress the whole procedure into the following. Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching on baseline and post-treatment variables to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching in this fashion creates direct counterparts in the auxiliary samples for each member of the experimental samples. Instead of estimating a model for the life-cycle profile of labor income, we directly use the matched counterparts' profiles. It is an intuitively appealing non-parametric estimator that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}. We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-parametric estimation procedure for conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches in Table~\ref{table:predsens}.\\ 
 
-\noindent \textbf{In your edits, you wrote that in addition to Equation~\eqref{eq:crucial}, we also need to satisfy:} 
+\noindent [JLG: \textbf{In your edits, you wrote that in addition to Equation~\eqref{eq:crucial}, we also need to satisfy:} 
 
 \begin{equation}
 \varepsilon_{k,a}^d = \varepsilon_{k,a}
@@ -367,7 +367,7 @@ A non-parametric forecasting alternative is to compress the whole procedure into
 
 \textbf{That's something new, and I am still unclear on it. It is very clear that the technology needs to be invariant across treatment regimes and across samples. But the distribution of the unobserved is not going to be invariant across treatment regimes. We could test invariance across samples. But is this really crucial or interesting? We are only after the mean. If $\phi$ is invariant across the samples, we accurately forecast (under exogeneity, or the simpler conditions C2, C3 in Appendix C3).}
 
-\noindent \textbf{I can display the test or put it in the Appendix, but if you could clarify this to me before I do it that would be nice. Maybe I am missing something.}
+\noindent \textbf{I can display the test or put it in the Appendix, but if you could clarify this to me before I do it that would be nice. Maybe I am missing something.]}
 
 
 \section{Forecasting Life-cycle Costs and Benefits: Practice} \label{section:cbapractice}
