--- a/Gender-Comparisons-Overall.tex
+++ b/Gender-Comparisons-Overall.tex
@@ -30,18 +30,21 @@
 		\item Boys: 10.44 (s.e. .19)
 		\item Girls: 10.38 (s.e. .21)
 		\item Difference: 0.05 (s.e. .20)
+\noindent \textbf{[JJH: The same.]} 
 	\end{itemize}
 \item Education of father
 	\begin{itemize}
 		\item Boys: 10.94 (s.e. 0.24)
 		\item Girls: 10.92 (s.e. 0.16)
 		\item Difference: 0.5 (s.e. .29)
+\noindent \textbf{[JJH: The same.]} 
 	\end{itemize}
 \item Intact families 
 	\begin{itemize}
 		\item Boys: .28 (s.e. 0.05)
 		\item Girls: .24 (s.e. 0.04)
 		\item Difference: 0.04 (s.e. 0.07)
+\noindent \textbf{[JJH: Slightly better.]} 
 	\end{itemize}
 \item Income + earnings of mother
 	\begin{itemize}
@@ -50,16 +53,16 @@
 		\item Difference: 2,385 (s.e. 3,133) 
 	\end{itemize}
 \item Income + earnings of father
-\noindent {\bf [JLG: not observed at baseline, observed later at some ages.]}
+\noindent {\bf [JLG: not observed at baseline, observed later at some ages.] [JJH: Ok - so it's not baseline.] [JLG: Correct.]}
 \end{itemize}
 
-\noindent  {\bf [JLG: So, as we have discussed multiple times, boys seem to have advantage relative to girls if we take the differences in the levels of these variables seriously, but the differences are not statistically significant. That is why we use the index in Table 5. You keep saying in the text that the index in Table 5 is not at baseline, but as the note of the table clearly states, all of the measures are at baseline. You also say that the measure is arbitrary. That measure is a factor estimated from the following variables: Mother's age, mother's education, mother's IQ, mother's marital status, mother's employment, and number of siblings.}\\
+\noindent  {\bf [JLG: So, as we have discussed multiple times, boys seem to have advantage relative to girls if we take the differences in the levels of these variables seriously, but the differences are not statistically significant. That is why we use the index in Table 5. You keep saying in the text that the index in Table 5 is not at baseline, but as the note of the table clearly states, all of the measures are at baseline. You also say that the measure is arbitrary. That measure is a factor estimated from the following variables: Mother's age, mother's education, mother's IQ, mother's marital status, mother's employment, and number of siblings.] [JJH: But conceptually we want earnings at home including father at baseline.] [JLG: When we use the parental income aggregate in the paper (e.g., Tables 1 and 4) it is composed of what we have at that age. It is mother, father or parental. But recall that father income itself we only observe at ages 12 and 21 and very little observations.]}\\
 
-\noindent {\bf We estimate a factor using these variables to form the index, so the weight given to each of them is not arbitrary. Actually, the weights given in the HRI index are arbitrary given that it was set by the researchers at UNC.}\\
+\noindent {\bf [JLG: We estimate a factor using these variables to form the index, so the weight given to each of them is not arbitrary. Actually, the weights given in the HRI index are arbitrary given that it was set by the researchers at UNC.] [JJH: What do you mean by arbitrary?] [JLG: They constructed the index weighting the different components linearly according to some weights they literally made up.]}\\
 
-\noindent {\bf If you look at row [1], you will see that we reject the null of this index being the same across genders using the Rosenbaum test. The average level of this index is greater for boys than it is for girls, so we conclude that boys are more advantaged than girls.}\\
+\noindent {\bf [JLG: If you look at row [1], you will see that we reject the null of this index being the same across genders using the Rosenbaum test. The average level of this index is greater for boys than it is for girls, so we conclude that boys are more advantaged than girls.] [JJH: Do you form the factor using the same weights for boys and girls] [JLG: Yes, but we decided to do so because we failed to reject the null of equality.]}\\
 
-\noindent {\bf You also comment that ``everyone is disadvantaged in this sample!'' Of course, but we are obviously using the term disadvantaged as relatively disadvantaged within the experiment, not relative to the population of the US.]\\}
+\noindent {\bf [JLG: You also comment that ``everyone is disadvantaged in this sample!'' Of course, but we are obviously using the term disadvantaged as relatively disadvantaged within the experiment, not relative to the population of the US.\\}
 
 \noindent In the experiment, same question. What is the experimentally induced impact on family environment?
 
@@ -69,7 +72,7 @@
 \item Family income? 
 \end{itemize}
 
-\noindent {\bf [JLG: An item-by-item breakout is going to leave to similar results as above and it could be arbitrary. But take a look at Table 4 and there are two rows relevant to your question. 
+\noindent {\bf [JLG: An item-by-item breakout is going to leave to similar results as above and it could be arbitrary. But take a look at Table 4 and there are two rows relevant to your question.] [JJH: You misuse the word ``arbitrary.'' It's a legitimate question - more mothers work at baseline? Or after treatment. I thought the latter.] [JLG: Yes. It is the latter.] [JJH: Does it differ for girls.] [JLG: No. But we iterated this by email, and I think that we agreed on this. Also, in Section 5, I am answering a few questions related to this. Please also see that.] 
 
 \begin{itemize} 
 \item Parental Income: this is the set of variables containing mother's income, father's income (when we observe it), mother's and father's labor supply. As you see, the impact is REALLY large in terms of combining functions and the Rosenbaum tests indicate rejection. 
