--- a/Gender-Comparisons-Overall.tex
+++ b/Gender-Comparisons-Overall.tex
@@ -102,4 +102,77 @@
 
 \noindent Now, we discussed that it could very well be that both stories are there. But there's one big difference. Our information on quality is not good, while we have measures of disadvantage at baseline with which we can perform tests! So they both could be playing a role. As we discussed in person, it's going to be impossible to separate the stories in our sample or tell what's the strength for either.]}
 
+\pagebreak
+\doublespacing
+
+\begin{center}
+\noindent {\centering \textbf{Memo: June 13, 2018}}
+\end{center}
+
+\noindent \textbf{[JJH: JORGE and Anna: I am becoming deeply frustrated by this process as I am sure both of you are I cannot get a coherent story.]} \textbf{[JLG: We are providing answers to your questions day and night based on the data. If we were so frustrated, we wouldn't put so many hours into this. You seem insulted from the work that we do. You said two nights ago: ``SO WHY is an expanding and clarifying story an endless loop.'' Please give us some credit. We are grateful for your comments, but let's try to bounce ideas. Didn't you teach me that careful work takes time and pain? Our scientific responsibility is to tell you what the data looks like, not to make things easy for us and make up a story that you would like. Some would do so and we never will.]}\\
+
+\noindent \textbf{[JJH: You say the treatment effect for family income is larger for BOYS.] [JLG: No. Baseline resources are greater but not the treatment effects.]}\\ 
+
+\noindent \textbf{[JJH: Does this ``treatment effect'' include the higher baseline family income for boys?] [JLG: No. That would convolute pre- and post-treatment and none of the results in Table 1 or 4 do so. Why would they?]}\\
+
+\noindent \textbf{[JJH: That's not a treatment effect.] [JLG: Thanks for the clarification, but it \textit{does not} include baseline income.} \\
+
+\noindent \textbf{[JJH: As far as I can tell Boys start with higher income than girls (baseline).] [JLG: Correct.]}\\
+
+\noindent \textbf{[JJH: Then the  mother is induced to work by program The INCREASE IN INCOME is greater for Girls than Boys.] [JLG: Yes.]}\\ 
+
+\noindent \textbf{[JJH: That's the only logical story Boys start better Girls gain ground.] [JLG: Yes. That's why the gaps decrease.]}\\
+
+\noindent \textbf{[JJH: The GROWTH in income is for girls.] [JLG: Yes.]}\\
+
+\noindent \textbf{[JJH: The level of income may still be lower for treatment girls but they catch up.] [JLG: Yes.]}\\ 
+
+\noindent \textbf{[JJH: The home scores go up for girls because of greater resources.] [JLG: Yes.]}\\
+
+\noindent \textbf{[JJH: Fathers  are more likely to be present  for boys but the program does not induce in more fathers with boys or girls.] [JLG: Yes.]}\\
+
+\noindent \textbf{[JJH: Fathers add income but fathers income does not increase.] [JLG: Yes.]}\\
+
+\noindent \textbf{[JJH: I just keep getting part of the story from you.] [JLG: Is this so true? Or we are trying to understand the data and this is a difficult problem? Also, given the questions that you are bringing up, you seem to know the story.]}\\
+
+\noindent \textbf{[JJH: I wont sign off unless we have a coherent story.] [JLG: We haven't asked you to sign off. We want to have a good study not a rotten publication. Francesconi may be in a rush. That's his deal, not ours.]}\\ 
+
+\noindent \textbf{[JJH: As I said earlier the old draft from last month section 5 was frighteningly bad and has scared the hell out of me in regards to this paper.]} \textbf{[JLG: Is it constructive to bring this up now? As I said before, I am not sure why our work becomes so insulting to you. We worked and gave you a draft. You didn't like Section 5 and, as far as I am concerned, there's nothing bad about that. But we are coauthors and we can build a better Section 5 together. If the point is that we should take responsibility for writing a bad Section 5, then I am very happy to take it and move on. I thought writing a better Section 5 was part of the ``expanding and clarifying story,'' not that a section written months ago was going to disable us from moving on with the paper.]}\\
+
+\noindent \textbf{[JJH: I feel I am fighting brick by brick house by house I still do not know if th treatment girlsget more incomefrm motherworking orfatherarriving do you know.]} \textbf{[JLG/AZ: ABC/CARE does not affect fathers presence. It does induce mothers to work. If the mothers are working and the father is present, then we do not know if the effect of that interaction given that we cannot distinguish father's income from mother's income. We do know that father's presence and family income are positively correlated. Please note that the treatment effects on parental income are actually larger for boys than for girls.]}\\
+
+\noindent \textbf{[JJH: Table 4 is very inconclusive The description does not match the reality of the table  There is no Dominance of girls.]} \textbf{[JLG/AZ:  In Table 4, 7 out of 10 of the average effect sizes are larger for girls than for boys. In 9 out of 10 of the proportion of positive treatment effects, girls at least weakly dominate boys. In 8 out of 10 of the proportion of significant, positive treatment effects, girls at least weakly dominate boys. In addition, Table 1 shows that ABC/CARE reverses male-female gaps indicating that the treatment effects for girls dominate those for boys. This seems to indicate dominance of girls.]}\\
+
+\noindent \textbf{[JJH: Figure 3 IS NOT at all clear and few differnces precisely determined I dropped 3.] [JLG: You requested that we brought that figure from the old draft the weekend before last because it ``told a story.'' I agree that this figure is not clear.]} \\
+
+\noindent \textbf{[JJH: Its really unfortunate that we do not have POST TRatment Family enviornments in terms of income.]} \\\textbf{[JLG: Yes it is.]}\\
+
+\noindent \textbf{[JJH: More mothers work  For gorls more motherswor but home score goes down  on net worse off.]}  \textbf{[JLG/AZ: Yes, treatment induces mothers to work. For girls, the home scores actually go up. This is seen in Table 4 under "Parenting," in which girls dominate boys. For example, the average effect size is 0.274 (and statistically significant) for girls, but 0.060 for boys. Recall that HOME scores include a subscale that negatively rates punishment, and the boys preform poorly in this specific subscale.]}\\
+
+\noindent \textbf{[JJH: So its impossible to see if more fathers came home once child I nteatemt?]} \textbf{[JLG/AZ:It is possible to see if fathers are present. It is impossible to see their individual income. As we show in Tables D.57 and D.41 in the Appendix, treatment does not induce fathers to come back. For both boys and girls, the effect on father's presence after baseline is negative comparing to the control-group boys who stay at home. This is not consistent across ages though, indicating that fathers come and go in all subgroups. We verified in the data that indeed this is what is happening. Although we cannot formally disentangle the mediators of treatment, it seems that father's presence is not one of them.]}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \end{document}
